# meta-sam3-scripts

./: .gitignore  demo_segmentation.py  main.py  pyproject.toml  run_segmentation.sh
map-search/: aerial_sam3.py  run_aerial_sam3.sh
